<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/twenty"
    android:layout_weight="4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shoppingListId"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:text="@string/listId" />

            <TextView
                android:id="@+id/shoppingListName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_red"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="15dp"
                android:text="@string/listName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/createdAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createdAt"
                android:layout_marginRight="4dp"/>

            <TextView
                android:id="@+id/shoppingListDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listDate" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
