<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/updateListSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/twenty">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productName"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty"/>

        <EditText
            android:id="@+id/updateProductName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_bottom_line"
            android:paddingLeft="4dp"
            android:layout_marginBottom="@dimen/thirty"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:height="@dimen/input_height" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productPrice"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty"/>

        <EditText
            android:id="@+id/updateProductPrice"
            android:layout_width="@dimen/input_price"
            android:layout_height="@dimen/input_height"
            android:background="@drawable/black_bottom_line"
            android:paddingLeft="4dp"
            android:layout_marginBottom="@dimen/thirty"
            android:inputType="numberDecimal|numberSigned"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:height="@dimen/input_height" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productQuantity"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty"/>

        <EditText
            android:id="@+id/updateProductQuantity"
            android:layout_width="@dimen/input_price"
            android:layout_height="@dimen/input_height"
            android:background="@drawable/black_bottom_line"
            android:paddingLeft="4dp"
            android:layout_marginBottom="@dimen/thirty"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:height="@dimen/input_height" />

        <Button
            android:id="@+id/updateProductButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:paddingLeft="@dimen/twenty"
            android:paddingRight="@dimen/twenty"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/updateProductButton"/>

    </LinearLayout>

    <Button
        android:id="@+id/deleteProduct"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        android:textStyle="bold"
        android:text="@string/deleteProduct"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
